From webpack to express

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,19 +7,20 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-  <script data-ad-client="ca-pub-1513758842983352" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script data-ad-client="ca-pub-1513758842983352" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   </script>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="design/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="design/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="design/favicon/favicon-16x16.png">
-  <link rel="manifest" href="design/favicon/site.webmanifest">
-  <link rel="mask-icon" href="design/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/images/favicon/site.webmanifest">
+  <link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
@@ -28,7 +29,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <body>
-  <img class="logo" src="design/logo.png" alt="WEEKBIN">
+  <img class="logo" src="/images/logo.png" alt="WEEKBIN">
   <h2 class="description">AUTOMATED NEWS SERVICE</h2>
   <h3 class="beta">currently in beta</h3>
   <div class="btns">
@@ -69,10 +70,10 @@
   </div class="links">
   <div class="apis">
     <p class="api">News by <a href="https://newsapi.org/" class="api">NewsAPI</a></pclass="apis">
-    <p class="api">Weather by <a href="https://openweathermap.org/" class="api">OpenWeatherMap</a></p>
-    <p class="api">Currency rates by <a href="https://fixer.io/" class="api">Fixer</a></p>
+      <p class="api">Weather by <a href="https://openweathermap.org/" class="api">OpenWeatherMap</a></p>
+      <p class="api">Currency rates by <a href="https://fixer.io/" class="api">Fixer</a></p>
   </div>
-  <script src="bundle.js"></script>
+  <script src="/javascripts/scripts.js"></script>
 </body style="background-color:#1c87c9;">
 
 </html>
