--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 
-  <link rel='stylesheet' href='/public/stylesheets/style.css' />
+  <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -73,7 +73,7 @@
       <p class="api">Weather by <a href="https://openweathermap.org/" class="api">OpenWeatherMap</a></p>
       <p class="api">Currency rates by <a href="https://fixer.io/" class="api">Fixer</a></p>
   </div>
-  <script src="/public/javascripts/scripts.js"></script>
+  <script src="/javascripts/scripts.js"></script>
 </body style="background-color:#1c87c9;">
 
 </html>
