--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,14 @@ A {
     text-decoration: none;
 }
 
+IMG {
+    color: white;
+}
+
 .titleimg {
     width: 50px;
-    display:inline;
-    vertical-align:middle;
+    display: inline;
+    vertical-align: middle;
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -29,7 +33,7 @@ A {
     color: #715C8C;
     font-size: 80px;
     line-height: 1.1;
-    display:inline;
+    display: inline;
     vertical-align: middle;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -78,8 +82,8 @@ A {
 }
 
 .article-img {
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
     display: inline-block;
     /* margin-bottom: 5px; */
     border-radius: 10px 10px 0px 0px;
@@ -100,7 +104,7 @@ A {
 
 .article-description {
     margin: 5px;
-    color: #838BC2;    
+    color: #838BC2;
     display: inline-block;
 }
 
@@ -120,7 +124,8 @@ A {
     border-image-slice: 1;
 } */
 
-.link, .links {
+.link,
+.links {
     font-family: FontPro;
     color: #333F63;
     text-align: center;
@@ -148,22 +153,23 @@ A {
 .currency-main {
     color: #333F63;
     font-size: 40px;
-    margin-bottom: 0px;   
-    display:block;
-    
+    margin-bottom: 0px;
+    display: block;
+
 }
 
 .currency-rate {
     color: #838BC2;
     font-size: 25px;
-    display: block;        
+    display: block;
 }
 
 .body3 {
     display: none;
 }
 
-.weatherbody, .body3 {
+.weatherbody,
+.body3 {
     font-family: FontPro;
     border-radius: 15px 15px 15px 15px;
     border: 4px solid #333F63;
@@ -193,7 +199,7 @@ A {
     -webkit-text-fill-color: transparent; */
     color: #715C8C;
     font-size: 40px;
-    margin-bottom: 0px;    
+    margin-bottom: 0px;
 }
 
 /* .weather-icon {
@@ -204,13 +210,15 @@ A {
 
 @keyframes donut-spin {
     0% {
-      transform: rotate(0deg);
+        transform: rotate(0deg);
     }
+
     100% {
-      transform: rotate(360deg);
+        transform: rotate(360deg);
     }
-  }
-  .loading {
+}
+
+.loading {
     display: inline-block;
     border: 4px solid rgba(0, 0, 0, 0.1);
     border-left-color: #715C8C;
@@ -222,14 +230,14 @@ A {
     margin-right: auto;
     margin-top: 100px;
     margin-bottom: 100px;
-  }
+}
 
 .currency-arrow {
     margin-left: auto;
     margin-right: auto;
     width: 30px;
-    display:inline-block;
-    vertical-align:middle;
+    display: inline-block;
+    vertical-align: middle;
     margin-top: -20px;
 }
 
@@ -252,11 +260,11 @@ A {
     outline: none;
     overflow: hidden;
 }
-  
+
 .button span {
     position: relative;
 }
-  
+
 .button::before {
     --size: 0;
     content: '';
@@ -269,7 +277,7 @@ A {
     transform: translate(-50%, -50%);
     transition: width 0.2s ease, height 0.2s ease;
 }
-  
+
 .button:hover::before {
     --size: 200px;
 }
@@ -302,7 +310,7 @@ A {
 }
 
 .api:hover {
-    color: #838BC2;  
+    color: #838BC2;
 }
 
 .music {
@@ -330,7 +338,7 @@ A {
 }
 
 .music-artist {
-    color: #838BC2;  
+    color: #838BC2;
     margin-bottom: 0px;
     display: block;
 }
